Fixed changes Sean request, z-index is still off though, and boundary checking is only done on the left since the right boundary was not giving the values I expected and not sure why at this time

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.css
@@ -30,6 +30,10 @@
   background-position-y: 0px;
 }
 
+.instance {
+  z-index: 10;
+}
+
 .launchbar-icon-image {
   display: inline-block;
   box-sizing: border-box;
@@ -46,6 +50,7 @@
   background-position-y: 0;
   background-position-x: center;
   cursor: pointer;
+  z-index: 7;
 }
 
 .launchbar-caption {
