--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.css
@@ -4,22 +4,21 @@
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 5px;
-    background-color: green;
 }
 
 .instance-viewer {
-    position: absolute;
-    top: -155px;
-    height: 170px;
+    position: fixed;
+    top: 0px;
+    height: 190px;
     padding: 5px 5px 5px 5px;
     background-color: #334B6B;
-    z-index: 6;
+    z-index: 0;
 }
 
 .all-instances-box {
     display: flex;
     flex-direction: row;
-    height: 120px;
+    height: 150px;
 }
 
 .caption {
@@ -29,7 +28,7 @@
 }
 
 .label-caption {
-    margin-top: 10px;
+    margin-top: 0px;
 }
 
 .instance-snapshot {
@@ -39,5 +38,5 @@
 .instance-preview {
     width: 200px;
     height: 120px;
-    margin-top: -34px;
+    margin-top: -10px;
 }
